--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.2.0",
+    "react-autosize-textarea": "^3.0.3",
     "react-day-picker": "^6.2.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
