--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-day-picker": "^6.2.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
     "redux": "^3.7.2",
