--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
     "react-day-picker": "^6.2.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.3.1",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
-    "webpack-dev-server": "2.8.2",
+    "webpack-dev-server": "^2.8.2",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
