Adding more Color Selectors in Config.

--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
-    "react": "^16.2.0",
+    "rc-slider": "^8.6.1",
+    "react": "^16.4.1",
     "react-autosize-textarea": "^3.0.3",
     "react-day-picker": "^6.2.1",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.1",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
@@ -46,6 +47,7 @@
     "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
+    "tinycolor2": "^1.4.1",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "^2.8.2",
