--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "tinycolor2": "^1.4.1",
+    "typeface-open-sans": "0.0.54",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "^2.8.2",
