--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
+    "react-toggle": "^4.0.2",
     "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
     "style-loader": "0.18.2",
