--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "promise": "8.0.1",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
+    "react-animate-height": "^2.0.3",
     "react-autosize-textarea": "^3.0.3",
     "react-day-picker": "^6.2.1",
     "react-dev-utils": "^4.2.1",
@@ -44,6 +45,7 @@
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
+    "react-slidedown": "^1.3.0",
     "react-toggle": "^4.0.2",
     "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
