Rollbar Integration and Metadata display Refresh.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
+    "detect-browser": "^3.0.0",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.1",
@@ -49,6 +50,7 @@
     "react-toggle": "^4.0.2",
     "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
+    "rollbar": "^2.4.4",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "tinycolor2": "^1.4.1",
