--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
     "react-slidedown": "^1.3.0",
+    "react-tabs": "^2.3.0",
     "react-toggle": "^4.0.2",
     "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
