--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
     "react-animate-height": "^2.0.3",
@@ -49,6 +50,8 @@
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
     "react-slidedown": "^1.3.0",
+    "react-swipe": "^6.0.3",
+    "react-swipe-to-reveal-options": "^0.3.6",
     "react-tabs": "^2.3.0",
     "react-toggle": "^4.0.2",
     "react-transition-group": "^2.3.1",
