--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-slidedown": "^1.3.0",
     "react-swipe": "^6.0.3",
     "react-swipe-to-reveal-options": "^0.3.6",
+    "react-swipeable": "^4.3.1",
     "react-tabs": "^2.3.0",
     "react-toggle": "^4.0.2",
     "react-transition-group": "^2.3.1",
