--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "autoprefixer": "7.1.2",
