--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
     "react-scroll-to-component": "^1.0.2",
+    "react-sizeme": "^2.5.2",
     "react-slidedown": "^1.3.0",
     "react-swipe": "^6.0.3",
     "react-swipeable": "^4.3.1",
